--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -444,6 +444,8 @@ guides_list:
    url: /guides/your-first-plugin/
  - title: "Creating Webhooks"
    url: /guides/creating-webhooks-with-the-canvas-sdk/
+ - title: "Staying on Top of Tasks"
+   url: /guides/staying-on-top-of-tasks/
 
 guides_templates:
  - title: "Behavioral Health"
