add documentation regarding action buttons

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -488,6 +488,9 @@ effects_module:
  - title: "Tasks"
    url: /sdk/effect-tasks/
    description: Create or update tasks.
+ - title: "Visual"
+   url: /sdk/visual-effect/
+   description: Display visual information in a patient's chart.
 
 data_module:
  - title: "Allergy Intolerance"
