--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -514,6 +514,9 @@ data_module:
  - title: "Medication"
    url: /sdk/data-medication/
    description: Pharmacologic agents used in the diagnosis, cure, mitigation, treatment, or prevention of disease.
+ - title: "Note"
+   url: /sdk/data-note/
+   description: Clinical notes on patient charts.
  - title: "Observation"
    url: /sdk/data-observation/
    description: Measurements and simple assertions made about a patient.
