feat: add documentation for LanchModalEffect and patient chart action buttons events

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -490,7 +490,7 @@ effects_module:
    description: Contextual information in a patient's chart.
  - title: "Layout Effects"
    url: /sdk/layout-effect/
-   description: Rearrange or hide summary sections in a patient's chart.
+   description: Modify or interact with the layout in Canvas.
  - title: "Questionnaires"
    url: /sdk/effect-questionnaires/
    description: Interact with questionnaires and interviews.
