add documentation for appointment model

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -502,6 +502,9 @@ data_module:
  - title: "Allergy Intolerance"
    url: /sdk/data-allergy-intolerance/
    description: Harmful or undesired physiological responses associated with exposure to a substance.
+ - title: "Appointment"
+   url: /sdk/data-appointment/
+   description: A scheduled meeting between a patient and a provider.
  - title: "Command"
    url: /sdk/data-command/
    description: Structured units of documentation in a patient's chart.
