--- a/_config.yml
+++ b/_config.yml
@@ -1,102 +1,6 @@
-### Canvas Medical
-#
-# This config file contains the config of your webpages
-# You may also want to update /config/webpack.pwa.js in case you want to generate a Progressive Web App
+source: .
 
-title: Canvas Documentation
-description: Canvas Documentation
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://docs.canvasmedical.com" # the base hostname & protocol for your site, e.g. http://example.com
-theme_color: '#eee9d9'
-logo: assets/images/2024-logo.png
-timezone: America/Los_Angeles
-
-### Cookie consent
-#cookie_consent: true
-
-### Collections
-collections_dir: "collections"
 collections:
-  api:
-    output: true
-    permalink: /:collection/:title/
-  documentation:
-    output: true
-    permalink: /:collection/:title/
-  guides:
-    output: true
-    permalink: /:collection/:title/
   release-notes:
     output: true
-    permalink: /:collection/:title/
-  sdk:
-    output: true
-    permalink: /:collection/:title/
-
-defaults:
-  - scope:
-      path          : "collections/_api/**/*"
-    values:
-      layout        : "api"
-  - scope:
-      path          : "collections/_documentation/**/*"
-    values:
-      layout        : "documentation"
-  - scope:
-      path          : "collections/_guides/**/*"
-    values:
-      layout        : "guides"
-  - scope:
-      path          : "collections/_release-notes/**/*"
-    values:
-      layout        : "releasenotes"
-  - scope:
-      path          : "collections/_sdk/**/*"
-    values:
-      layout        : "sdk"
-
-
-### Feed settings
-feed:
-  url: "https://docs.canvasmedical.com"
-  title: Canvas Medical Release Notes
-  description: Updates 
-  posts_limit: 20
-  content_type: "html"
-  collections:
-    release-notes:
-      path: "/release-notes.xml"
-      permalink: /release-notes/:title  
-
-
-### Build settings
-minify_html: false
-plugins:
-  - jekyll-algolia
-  - jekyll-feed
-  - jekyll-last-modified-at
-  - jekyll-menus
-  - jekyll-seo-tag
-  - jekyll-sitemap
-  - jekyll-tabs
-  - octopress-minify-html
-
-### Exclude from processing
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - README.md
-  - _images
-  - _static
-  - _src
-  - amplify.yml
-  - config
-  - icon.png
-  - node_modules
-  - optimization-fix
-  - optimization-fix-this-file-is-ignored.js
-  - package.json
-  - vendor
-  - webpack.config.js
-  - yarn-error.log
-  - yarn.lock
+    permalink: /release-notes/:path/
