--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -546,6 +546,8 @@ data_module:
  - title: "Appointment"
    url: /sdk/data-appointment/
    description: A scheduled meeting between a patient and a provider.
+ - title: "Billing Line Item"
+   url: /sdk/data-billing-line-item/
  - title: "Care Team"
    url: /sdk/data-care-team/
    description: Teams assigned for patient care.
