--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -643,6 +643,9 @@ data_module:
  - title: "Team"
    url: /sdk/data-team
    description: Data associated with Teams.
+ - title: "User"
+   url: /sdk/data-user
+   description: Data associated with Users.
  - title: "Value Sets"
    url: /sdk/data-value-sets/
    description: Lists of codes and terms from various clinical coding systems grouped by a defining concept.
