add to menus and update guide

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -439,9 +439,9 @@ guides_list:
    uses:
      - sdk
 
- - title: "Visualizing Data Within the Canvas Chart"
-   url: /guides/growth-charts/
-   description: Visualizing observations as pediatric growth charts
+ - title: "Implementing Patient Portal Forms"
+   url: /guides/patient-portal-forms
+   description: Surface Forms Within the Patient Portal
    uses:
      - sdk
 
@@ -471,11 +471,19 @@ guides_list:
    uses:
      - sdk
 
+ - title: "Visualizing Data Within the Canvas Chart"
+   url: /guides/growth-charts/
+   description: Visualizing observations as pediatric growth charts
+   uses:
+     - sdk
+
  - title: "Your First Application"
    url: /guides/your-first-application
    description: Install and customize embeddable applications in Canvas
    uses:
      - sdk
+
+
 
 guides_templates:
  - title: "Behavioral Health"
@@ -534,6 +542,9 @@ effects_module:
  - title: "Billing Line Items"
    url: /sdk/effect-billing-line-items/
    description: Add, modify, or remove billing codes on a note.
+ - title: "Form Result"
+   url: /sdk/form-result-effect
+   description: Effect for dynamically displaying forms in the Patient Portal.
  - title: "Layout Effects"
    url: /sdk/layout-effect/
    description: Modify or interact with the layout in Canvas.
