--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -493,7 +493,7 @@ guides_list:
 
  - title: "Additional fields on patient profile"
    url: /guides/profile-additional-fields/
-   description: How to add additional fields to patient profile
+   description: How to add additional fields to the patient profile
    uses:
      - sdk
 
